--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Music Player</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Music Player</h1>
