--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Music Player</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
         <h1>Music Player</h1>
